Several PMD error/warning fixes