@@ -17,7 +17,7 @@ public class InsertTableDialogPresenter implements InsertTableDialog {
         view.hide();
     }
 
-    public void init(InsertTableDialogView view) {
+    public void init(final InsertTableDialogView view) {
         this.view = view;
     }
 
@@ -26,14 +26,14 @@ public class InsertTableDialogPresenter implements InsertTableDialog {
         view.reset();
     }
 
-    public void onInsert(String rowsS, String colsS, String borderS) {
+    public void onInsert(final String rowsS, final String colsS, final String borderS) {
         if (onInsertTable != null) {
-            Integer rows = new Integer(rowsS);
-            Integer cols = new Integer(colsS);
-            Integer border = new Integer(borderS);
-            boolean validRows = rows < MAX_ROWS && rows > 0;
-            boolean validCols = cols < MAX_COLS && cols > 0;
-            boolean validBorder = border < MAX_BORDER && border > 0;
+            final Integer rows = Integer.valueOf(rowsS);
+            final Integer cols = Integer.valueOf(colsS);
+            final Integer border = Integer.valueOf(borderS);
+            final boolean validRows = rows < MAX_ROWS && rows > 0;
+            final boolean validCols = cols < MAX_COLS && cols > 0;
+            final boolean validBorder = border < MAX_BORDER && border > 0;
             onInsertTable.onEvent(createTable(validRows ? rows : MAX_ROWS, validCols ? cols : MAX_COLS,
                     validBorder ? border : MAX_BORDER));
         }
@@ -41,7 +41,7 @@ public class InsertTableDialogPresenter implements InsertTableDialog {
         view.reset();
     }
 
-    public void setOnInsertTable(Listener<String> listener) {
+    public void setOnInsertTable(final Listener<String> listener) {
         this.onInsertTable = listener;
     }
 
@@ -49,7 +49,7 @@ public class InsertTableDialogPresenter implements InsertTableDialog {
         view.show();
     }
 
-    private String createTable(int rows, int cols, int border) {
+    private String createTable(final int rows, final int cols, final int border) {
         return view.generateTable(rows, cols, view.getSameColWidth(), view.getBackgroundColor(), border,
                 view.getBorderColor());
     }
